# frc-event-calculator

./: .gitignore  Alliance.py  CLAUDE.md  Constants.py  Event.py  Match.py  README.md  README.zh-CN.md  Requests.py  Season.py  Team.py  Test.py  Utils.py  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
src/frc_calculator/cli/: app.py
src/frc_calculator/config/: constants.py
src/frc_calculator/data/: frc_events.py  statbotics.py
src/frc_calculator/models/: alliance.py  event.py  match.py  team.py
src/frc_calculator/services/: season.py
src/frc_calculator/ui/: charts.py  components.py  streamlit_app.py
src/frc_calculator/utils/: event_stats.py  io_utils.py  math_utils.py
